unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/EventApi__Ticket_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Junction object to configure Schedule Items and link them to ticket types.</description>
    <label>Ticket Type Schedule Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Type Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>