unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/fields/EventApi__Disable_Registration__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Disable_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</description>
    <inlineHelpText>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</inlineHelpText>
    <label>Disable Registration</label>
    <type>Checkbox</type>
</CustomField>