unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/fields/EventApi__Hide_During_Registration__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hide_During_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field removes this session from the registration&#39;s agenda page.</description>
    <inlineHelpText>Checking this field removes this session from the registration&#39;s agenda page.</inlineHelpText>
    <label>Hide During Registration</label>
    <type>Checkbox</type>
</CustomField>