unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/fields/EventApi__Required_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Required_for_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field automatically includes this session for purchase during registration.</description>
    <inlineHelpText>Checking this field automatically includes this session for purchase during registration.</inlineHelpText>
    <label>Required for Registration</label>
    <type>Checkbox</type>
</CustomField>