unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <description>This field relates the Ticket Type Scheduled Item to the Scheduled Item.</description>
    <inlineHelpText>This field relates the Ticket Type Scheduled Item to the Scheduled Item.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Ticket Type Schedule Items</relationshipLabel>
    <relationshipName>Ticket_Type_Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>