unpackaged/main/default/objects/EventApi__Ticket_Schedule_Item__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <description>This field relates the Ticket Type Scheduled Item to the Ticket Type.</description>
    <inlineHelpText>This field relates the Ticket Type Scheduled Item to the Ticket Type.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Ticket Type Schedule Items</relationshipLabel>
    <relationshipName>Ticket_Type_Schedule_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>